load("@rules_android//android:rules.bzl", "android_library")
load("@rules_java//java:defs.bzl", "java_library")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

android_library(
    name = "jwt_ecdsa_public_key_sign-android",
    srcs = ["JwtEcdsaPublicKeySign.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:accesses_partial_key-android",
        "//src/main/java/com/google/crypto/tink:low_level_crypto_caller-android",
        "//src/main/java/com/google/crypto/tink:public_key_sign-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_private_key-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_public_key_sign-android",
        "//src/main/java/com/google/crypto/tink/jwt:raw_jwt-android",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_format-android",
        "//src/main/java/com/google/crypto/tink/subtle:ecdsa_sign_jce-android",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "jwt_ecdsa_public_key_sign",
    srcs = ["JwtEcdsaPublicKeySign.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:accesses_partial_key",
        "//src/main/java/com/google/crypto/tink:low_level_crypto_caller",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_private_key",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_public_key_sign",
        "//src/main/java/com/google/crypto/tink/jwt:raw_jwt",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_format",
        "//src/main/java/com/google/crypto/tink/subtle:ecdsa_sign_jce",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "jwt_ecdsa_public_key_verify",
    srcs = ["JwtEcdsaPublicKeyVerify.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:accesses_partial_key",
        "//src/main/java/com/google/crypto/tink:low_level_crypto_caller",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_public_key",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_public_key_verify",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_validator",
        "//src/main/java/com/google/crypto/tink/jwt:raw_jwt",
        "//src/main/java/com/google/crypto/tink/jwt:verified_jwt",
        "//src/main/java/com/google/crypto/tink/jwt/internal:json_util",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_format",
        "//src/main/java/com/google/crypto/tink/subtle:ecdsa_verify_jce",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

android_library(
    name = "jwt_ecdsa_public_key_verify-android",
    srcs = ["JwtEcdsaPublicKeyVerify.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:accesses_partial_key-android",
        "//src/main/java/com/google/crypto/tink:low_level_crypto_caller-android",
        "//src/main/java/com/google/crypto/tink:public_key_verify-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_public_key-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_public_key_verify-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_validator-android",
        "//src/main/java/com/google/crypto/tink/jwt:raw_jwt-android",
        "//src/main/java/com/google/crypto/tink/jwt:verified_jwt-android",
        "//src/main/java/com/google/crypto/tink/jwt/internal:json_util-android",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_format-android",
        "//src/main/java/com/google/crypto/tink/subtle:ecdsa_verify_jce-android",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)
