load("@build_bazel_rules_android//android:rules.bzl", "android_library")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

android_library(
    name = "ed25519_verifier-android",
    srcs = ["Ed25519Verifier.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:low_level_crypto_caller-android",
        "//src/main/java/com/google/crypto/tink:public_key_verify-android",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_public_key-android",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_verify-android",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "ed25519_verifier",
    srcs = ["Ed25519Verifier.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:low_level_crypto_caller",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_public_key",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_verify",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

android_library(
    name = "ed25519_signer-android",
    srcs = ["Ed25519Signer.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:low_level_crypto_caller-android",
        "//src/main/java/com/google/crypto/tink:public_key_sign-android",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_private_key-android",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_sign-android",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "ed25519_signer",
    srcs = ["Ed25519Signer.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:low_level_crypto_caller",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_private_key",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_sign",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)
