licenses(["notice"])

java_test(
    name = "JwtEcdsaProtoSerializationTest",
    size = "small",
    srcs = ["JwtEcdsaProtoSerializationTest.java"],
    deps = [
        "//proto:jwt_ecdsa_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:big_integer_encoding",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "//src/main/java/com/google/crypto/tink/internal/testing:asserts",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_parameters",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_private_key",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_public_key",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_ecdsa_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
