licenses(["notice"])

java_test(
    name = "JwtEcdsaProtoSerializationTest",
    size = "small",
    srcs = ["JwtEcdsaProtoSerializationTest.java"],
    deps = [
        "//proto:jwt_ecdsa_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:big_integer_encoding",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "//src/main/java/com/google/crypto/tink/internal/testing:asserts",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_parameters",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_private_key",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_public_key",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_ecdsa_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "JwtRsaSsaPkcs1ProtoSerializationTest",
    size = "small",
    srcs = ["JwtRsaSsaPkcs1ProtoSerializationTest.java"],
    deps = [
        "//proto:jwt_rsa_ssa_pkcs1_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:big_integer_encoding",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "//src/main/java/com/google/crypto/tink/internal/testing:asserts",
        "//src/main/java/com/google/crypto/tink/internal/testing:big_integer_test_util",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_rsa_ssa_pkcs1_parameters",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_rsa_ssa_pkcs1_private_key",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_rsa_ssa_pkcs1_public_key",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_rsa_ssa_pkcs1_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "JwtRsaSsaPssProtoSerializationTest",
    size = "small",
    srcs = ["JwtRsaSsaPssProtoSerializationTest.java"],
    deps = [
        "//proto:jwt_rsa_ssa_pss_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:big_integer_encoding",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "//src/main/java/com/google/crypto/tink/internal/testing:asserts",
        "//src/main/java/com/google/crypto/tink/internal/testing:big_integer_test_util",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_rsa_ssa_pss_parameters",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_rsa_ssa_pss_private_key",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_rsa_ssa_pss_public_key",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_rsa_ssa_pss_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "JsonUtilTest",
    size = "small",
    srcs = ["JsonUtilTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/jwt:jwt_invalid_exception",
        "//src/main/java/com/google/crypto/tink/jwt/internal:json_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "JwtFormatTest",
    size = "small",
    srcs = ["JwtFormatTest.java"],
    deps = [
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_invalid_exception",
        "//src/main/java/com/google/crypto/tink/jwt:raw_jwt",
        "//src/main/java/com/google/crypto/tink/jwt/internal:json_util",
        "//src/main/java/com/google/crypto/tink/jwt/internal:jwt_format",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
